# elf2iso

./: .gitignore  Cargo.toml  HEY.ISO  LICENSE  README.md  meson.build
include/: args.hpp  system_cnf.hpp
src/: args.cpp  cli.rs  gen_iso.cpp  main.cpp  main.rs  system_cnf.cpp
