[package]
name = "elf2iso"
description = "A command-line tool for converting ELF files to ISO format for the PlayStation 2."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/RedsonBr140/elf2iso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = '4.1.13', features = ['derive']}
